--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-command = "npm run build"
-publish = "dist"
+  command = "npm run build"  # Build command for Vite
+  publish = "dist"           # Output directory after building
 
-[[headers]]
-for = "/*"
-[headers.values]
-Access-Control-Allow-Origin = "*"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
